CORE-571 - Fixed chevron centering on small table rows

--- a/css/table.less
+++ b/css/table.less
@@ -49,9 +49,9 @@ permissions and limitations under the License.
     }
 
     .table-small-item {
-        margin-bottom: 0;
-        width: auto;
-        max-width: 90%;
+        margin-bottom: 0 !important;
+        width: auto !important;
+        max-width: 90% !important;
         float: left;
     }
 
